--- a/apps/stubs-example/package.json
+++ b/apps/stubs-example/package.json
@@ -23,7 +23,6 @@
     "@remix-run/react": "^1.7.3",
     "@remix-run/serve": "^1.7.3",
     "@remix-run/server-runtime": "^1.7.3",
-    "@storybook/builder-vite": "7.0.0-alpha.46",
     "cross-env": "^7.0.3",
     "isbot": "^3.5.4",
     "react": "^18.2.0",
@@ -37,6 +36,8 @@
     "@storybook/addon-essentials": "7.0.0-alpha.46",
     "@storybook/addon-interactions": "7.0.0-alpha.46",
     "@storybook/addon-links": "7.0.0-alpha.46",
+    "@storybook/builder-vite": "7.0.0-alpha.46",
+    "@storybook/client-api": "^6.5.13",
     "@storybook/react": "7.0.0-alpha.46",
     "@storybook/react-vite": "7.0.0-alpha.46",
     "@storybook/react-webpack5": "7.0.0-alpha.46",
