--- a/apps/stubs-example/package.json
+++ b/apps/stubs-example/package.json
@@ -19,54 +19,54 @@
     "/public/build"
   ],
   "dependencies": {
-    "@remix-run/node": "^1.7.3",
-    "@remix-run/react": "^1.7.3",
-    "@remix-run/serve": "^1.7.3",
-    "@remix-run/server-runtime": "^1.7.3",
-    "cross-env": "^7.0.3",
-    "isbot": "^3.5.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "tiny-invariant": "^1.2.0"
+    "@remix-run/node": "1.7.4",
+    "@remix-run/react": "1.7.4",
+    "@remix-run/serve": "1.7.4",
+    "@remix-run/server-runtime": "1.7.4",
+    "cross-env": "7.0.3",
+    "isbot": "3.6.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "tiny-invariant": "1.3.1"
   },
   "devDependencies": {
     "@mdx-js/react": "2.1.5",
-    "@remix-run/dev": "^1.7.3",
-    "@remix-run/eslint-config": "^1.7.3",
+    "@remix-run/dev": "1.7.4",
+    "@remix-run/eslint-config": "1.7.4",
     "@storybook/addon-essentials": "7.0.0-alpha.46",
     "@storybook/addon-interactions": "7.0.0-alpha.46",
     "@storybook/addon-links": "7.0.0-alpha.46",
     "@storybook/builder-vite": "7.0.0-alpha.46",
-    "@storybook/client-api": "^6.5.13",
+    "@storybook/client-api": "6.5.13",
     "@storybook/react": "7.0.0-alpha.46",
     "@storybook/react-vite": "7.0.0-alpha.46",
     "@storybook/react-webpack5": "7.0.0-alpha.46",
     "@storybook/testing-library": "0.0.13",
-    "@testing-library/dom": "^8.18.1",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^14.4.3",
-    "@types/jsdom": "^20.0.0",
-    "@types/react": "^18.0.15",
-    "@types/react-dom": "^18.0.6",
-    "@types/testing-library__jest-dom": "^5.14.5",
-    "@vitejs/plugin-react": "^2.1.0",
-    "@vitest/coverage-c8": "^0.23.4",
-    "@vitest/ui": "^0.24.4",
-    "eslint": "^8.23.1",
-    "eslint-plugin-storybook": "^0.6.6",
-    "happy-dom": "^6.0.4",
-    "jsdom": "^20.0.2",
-    "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.16",
+    "@testing-library/dom": "8.19.0",
+    "@testing-library/jest-dom": "5.16.5",
+    "@testing-library/react": "13.4.0",
+    "@testing-library/user-event": "14.4.3",
+    "@types/jsdom": "20.0.0",
+    "@types/react": "18.0.24",
+    "@types/react-dom": "18.0.8",
+    "@types/testing-library__jest-dom": "5.14.5",
+    "@vitejs/plugin-react": "2.2.0",
+    "@vitest/coverage-c8": "0.24.5",
+    "@vitest/ui": "0.24.5",
+    "eslint": "8.26.0",
+    "eslint-plugin-storybook": "0.6.7",
+    "happy-dom": "7.6.6",
+    "jsdom": "20.0.2",
+    "npm-run-all": "4.1.5",
+    "postcss": "8.4.18",
     "remix-stubs": "workspace:*",
     "storybook": "7.0.0-alpha.46",
-    "tailwindcss": "^3.1.8",
+    "tailwindcss": "3.2.1",
     "tsconfig": "workspace:*",
-    "typescript": "^4.7.4",
-    "vite": "^3.1.8",
-    "vite-tsconfig-paths": "^3.5.0",
-    "vitest": "^0.23.4"
+    "typescript": "4.8.4",
+    "vite": "3.2.2",
+    "vite-tsconfig-paths": "3.5.2",
+    "vitest": "0.24.5"
   },
   "engines": {
     "node": ">=14"
