--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
-    "prettier": "latest",
-    "turbo": "latest",
-    "typescript": "latest",
-    "vitest": "latest",
-    "vite": "latest"
+    "prettier": "2.7.1",
+    "turbo": "1.6.3",
+    "typescript": "4.8.4",
+    "vite": "3.2.2",
+    "vitest": "0.24.5"
   },
   "engines": {
     "node": ">=14.0.0"
