--- a/packages/remix-stubs/package.json
+++ b/packages/remix-stubs/package.json
@@ -10,25 +10,24 @@
     "lint": "eslint *.ts*"
   },
   "dependencies": {
-    "@remix-run/react": "^1.7.3",
-    "@remix-run/server-runtime": "^1.7.3",
-    "history": "^5.3.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "@remix-run/react": "1.7.4",
+    "@remix-run/server-runtime": "1.7.4",
+    "history": "5.3.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@types/node": "16.18.3",
-    "typescript": "^4.7.4",
-    "@remix-run/dev": "^1.7.3",
-    "@remix-run/eslint-config": "^1.7.3",
-    "@remix-run/router": "^1.0.2",
-    "react-router": "6.4.2",
+    "@remix-run/dev": "1.7.4",
+    "@remix-run/eslint-config": "1.7.4",
+    "@remix-run/router": "1.0.3",
+    "@types/node": "18.11.9",
+    "@types/react": "18.0.24",
+    "@types/react-dom": "18.0.8",
+    "react-router": "6.4.3",
     "tsconfig": "workspace:*",
-    "@types/react": "^18.0.15",
-    "@types/react-dom": "^18.0.6"
+    "typescript": "4.8.4"
   },
   "engines": {
     "node": ">=14"
   }
 }
-  
