--- a/packages/remix-stubs/package.json
+++ b/packages/remix-stubs/package.json
@@ -10,15 +10,15 @@
     "lint": "eslint *.ts*"
   },
   "dependencies": {
-    "@remix-run/react": "1.7.4",
-    "@remix-run/server-runtime": "1.7.4",
+    "@remix-run/react": "0.0.0-experimental-ce81fb82f",
+    "@remix-run/server-runtime": "0.0.0-experimental-ce81fb82f",
     "history": "5.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@remix-run/dev": "1.7.4",
-    "@remix-run/eslint-config": "1.7.4",
+    "@remix-run/dev": "0.0.0-experimental-ce81fb82f",
+    "@remix-run/eslint-config": "0.0.0-experimental-ce81fb82f",
     "@remix-run/router": "1.0.3",
     "@types/node": "18.11.9",
     "@types/react": "18.0.24",
